# perp-arb

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/abis/: UniswapV3Pool.json
src/config/: addresses.py
src/enums/: contract.py  enum_definitions.py  network.py  token.py  uniswap.py
src/helpers/: contract_helpers.py  uniswap_helpers.py  web3_client_helpers.py
src/models/: data_models.py
src/strategies/: SynFuturesObserver.py  UniswapV3Factory.py  UniswapV3Pool.py
src/strategies/contracts/: SynFuturesGate.py  SynFuturesInstrument.py  SynFuturesObserver.py  UniswapV3Factory.py  UniswapV3Pool.py
src/strategies/funding_rate_arbitrage/: profitability.py
src/strategies/spot/: LiquidityPool.py  UniswapV3Factory.py  UniswapV3Pool.py
src/utils/: math.py  path_helpers.py
tests/helpers/: contract_helpers_tests.py  test_contract_helpers.py
