[project]
name = "perp-arb"
version = "0.1.0"
description = "perp arb experiment using Ethereum"
authors = [
    {name = "alex",email = "alexwstraw@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "web3 (>=7.9.0,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]